EXOJCR-1585: add unit tests for HSQLDB